Fix moving OL items on Safari mobile
Also fix long words overflowing panel.

Close #90 and close #89.

--- a/client/micro.css
+++ b/client/micro.css
@@ -473,6 +473,7 @@ legend {
 
 .micro-panel-main {
     flex: auto;
+    min-width: 0;
 }
 
 /* ---- Entity list ---- */
@@ -502,6 +503,7 @@ legend {
 
 .micro-heading > h1 {
     flex: auto;
+    min-width: 0;
     padding: 0;
     font-size: 2rem;
 }
